--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "prettier:check:ci": "prettier --check \"**/*.{ts,tsx,js,jsx,md,css}\""
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "1.0.4",
     "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-select": "2.0.0",
     "@radix-ui/react-separator": "1.0.3",
     "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/themes": "^2.0.3",
     "@tanstack/react-query": "5.21.7",
     "@tanstack/react-query-devtools": "5.21.7",
     "@tanstack/react-query-next-experimental": "5.21.7",
